--- a/PhoneBookApp/build.gradle
+++ b/PhoneBookApp/build.gradle
@@ -25,4 +25,5 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 }
