--- a/PhoneBookApp/build.gradle
+++ b/PhoneBookApp/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
 }
