--- a/PhoneBookApp/build.gradle
+++ b/PhoneBookApp/build.gradle
@@ -27,4 +27,11 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+	apply plugin: 'com.diffplug.gradle.eclipse.mavencentral'
+	eclipseMavenCentral {
+		release '4.7.0', {
+			compile 'org.eclipse.swt'
+			useNativesForRunningPlatform()
+		}
+	}
 }
