tried turning phonebook into maven project....no success...all i find on the net is how to convert maven project into gradle but i need to do the opposite :(

--- a/PhoneBookApp/build.gradle
+++ b/PhoneBookApp/build.gradle
@@ -3,7 +3,9 @@ buildscript {
         springBootVersion = '2.1.2.RELEASE'
     }
     repositories {
-        mavenCentral()
+		maven { url "http://maven.springframework.org/release" }
+		maven { url "http://maven.restlet.org" }
+		mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -18,8 +20,8 @@ group = 'com.krisztinanmth'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
-repositories {
-    mavenCentral()
+plugins {
+	id 'maven'
 }
 
 dependencies {
