--- a/PhoneBookApp/build.gradle
+++ b/PhoneBookApp/build.gradle
@@ -3,12 +3,17 @@ buildscript {
         springBootVersion = '2.1.2.RELEASE'
     }
     
+	repositories {
+		mavenCentral()
+	}
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
 apply plugin: 'java'
+apply plugin: 'maven'
+apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -16,6 +21,9 @@ group = 'com.krisztinanmth'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+repositories {
+	mavenCentral()
+}
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
