chore(GUI_swt): will be deleted later on

--- a/GUI_swt/GUI_swt/build.gradle
+++ b/GUI_swt/GUI_swt/build.gradle
@@ -23,7 +23,8 @@ dependencies {
     
     compile project(':phonebook')
     
-    //compile 'org.eclipse:swt:3.3.0-v3346'
+    compile files('lib/swt.jar')
+    
 }
 
 // In this section you declare where to find the dependencies of your project
